@@ -17,8 +17,6 @@ Gem::Specification.new do |s|
   s.executables   = `git ls-files -- bin/*`.split("\n").map{ |f| File.basename(f) }
   s.require_paths = ["lib"]
   
-  s.add_runtime_dependency 'aasm'
-  s.add_runtime_dependency 'active_record_inline_schema', '>=0.6.1'
   s.add_runtime_dependency 'activerecord', '> 3'
   s.add_runtime_dependency 'activesupport', '> 3'
   s.add_runtime_dependency 'errata', '>=1.0.1'
@@ -29,7 +27,6 @@ Gem::Specification.new do |s|
   s.add_runtime_dependency 'roo', '>=1.10.3'
 
   s.add_development_dependency 'fuzzy_match'
-  s.add_development_dependency 'lock_method'
   s.add_development_dependency 'minitest'
   s.add_development_dependency 'minitest-reporters'
   s.add_development_dependency 'rake'
